# my-gaze-model

./: .gitignore  README.md  demo.py  eval.py  pyproject.toml  train.py  train_all.sh
inference/: .env.example  .gitignore  README.md  pyinstaller.spec  pyproject.toml  rest_service.py  rest_service_integration_example.py  rest_service_test.py
inference/2d/: demo.py  exp_data_collector.py  exp_data_collector_calib_grid_density.py  exp_data_collector_headpose.py  exp_data_collector_linearity.py  exp_data_collector_mapper_compares.py  exp_video_clickpointjson.py
inference/3d/: demo.py  rest_service.py  rest_service_integration_example.py  rest_service_test.py  ws_service.py
inference/data_collector/: README.md  SAMPLE_DATA.md  app.py  config.py  main.py
inference/data_collector/core/: app_controller.py  data_manager.py  workers.py
inference/data_collector/ui/: calibration_overlay.py  main_window.py  menu_bar_app.py  preview_ui.py  system_tray.py
inference/data_collector/utils/: accessibility_check.py  r2_uploader.py  system_info.py
inference/src/: __init__.py
inference/src/inference/: __init__.py  gaze_pipeline.py  gaze_pipeline_2d.py  gaze_pipeline_3d.py  mapper.py
inference/src/models/: __init__.py  gaze_model.py  mobileone.py
training/: README.md  benchmark.py  demo.py  eval.py  get_model_stats.py  latency_benchmark.py  pyproject.toml  run_evaluations.sh  run_gaze360_trainings.sh  train.py  train_all.sh  train_kfold.py
training/configs/: gaze360_train.yaml  mpiifacegaze_train.yaml
training/mpii_loocv/: epoch_sweep_test.sh  prepare_mpii_labels.py  run.sh  run_multi_model.sh
training/preprocessing/: README.md  core.py  mpiifacegaze.py
(+65 files in other folders)
