[project]
name = "gaze-inference"
version = "1.0.0"
description = "Gaze Inference Backend"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "aiohttp>=3.8.0",
    "fastapi[standard]>=0.116.1",
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "requests>=2.31.0",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "websockets>=15.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
