[project]
name = "gaze-inference"
version = "1.0.0"
description = "Gaze Inference Backend"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "aiohttp>=3.8.0",
    "fastapi[standard]>=0.116.1",
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "psutil>=7.1.0",
    "pyqt6>=6.9.1",
    "requests>=2.31.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
